@@ -1,6 +1,8 @@
 This file documents the revision history for Perl extension SAMS.
 
 0.01  2013-12-30 17:14:01
+    - SAM-2361: Added new Language, Translation classes for localisation
+    - SAM-2361: Created Schema Version 1 as a direct map of Old sams db
     - SAM-2361: moved config file for Subs to local app dir
     - SAM-2361: Set errors on account retrieval to return to index.html
     - SAM-2361: Removed hidden account_id from countact details form
